[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/GameThings/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Objects/Modern.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameThings/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GameThings/Goal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GameLevels/Level_9.gd" type="Script" id=5]
[ext_resource path="res://Assets/Objects/Classic.png" type="Texture" id=6]
[ext_resource path="res://Assets/Blocks/Caixa = Empurre.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/GameThings/Box.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Blocks/Haiiro = vc.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Blocks/Parede = Pare.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Blocks/Bot√£o = Pisar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Blocks/Porta.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Blocks/Bandeira = Meta.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Blocks/IFs/IF LV 9.png" type="Texture" id=14]
[ext_resource path="res://Scripts/GameBasics/Help.gd" type="Script" id=15]
[ext_resource path="res://Assets/Creatures-no-bg.png" type="Texture" id=16]
[ext_resource path="res://Assets/Objects/Sem Fundo.png" type="Texture" id=17]
[ext_resource path="res://Assets/box.png" type="Texture" id=19]
[ext_resource path="res://Styles/Fonts/Help Font.tres" type="DynamicFont" id=20]
[ext_resource path="res://Scripts/GameBasics/Button.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 285.714, 119.286 )

[node name="Level_9" type="Node2D"]
script = ExtResource( 5 )

[node name="BaseLevel" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 80 )
z_index = 2

[node name="Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 1.52588e-05, -8 )
scale = Vector2( 0.7, 0.7 )
nextLevelPath = "res://Scenes/GameLevels/Level_10.tscn"

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 9.99998, 6 )
scale = Vector2( 1.2, 1.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Door"]
texture = ExtResource( 6 )
hframes = 20
vframes = 20
frame = 24

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -112, -16 )
script = ExtResource( 21 )

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2( 176, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2( 23.5, 24.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Area2D"]
position = Vector2( 16, 16 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 2 )
centered = false
hframes = 20
vframes = 21
frame = 152

[node name="Box" parent="." instance=ExtResource( 8 )]
position = Vector2( 114, 98 )

[node name="Walls" type="Node" parent="."]

[node name="GenericObject1" type="KinematicBody2D" parent="Walls"]
position = Vector2( 80, 128 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject1"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject1"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject12" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 64 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject12"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject12"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject13" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject13"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject13"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject14" type="KinematicBody2D" parent="Walls"]
position = Vector2( 144, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject14"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject14"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject15" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 80 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject15"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject15"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject26" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 112 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject26"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject26"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject16" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 80 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject16"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject16"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject17" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 16 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject17"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject17"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject18" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 96 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject18"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject18"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject19" type="KinematicBody2D" parent="Walls"]
position = Vector2( 32, 112 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject19"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject19"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject20" type="KinematicBody2D" parent="Walls"]
position = Vector2( 112, 16 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject20"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject20"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject21" type="KinematicBody2D" parent="Walls"]
position = Vector2( 128, 16 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject21"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject21"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject22" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 128 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject22"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject22"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject23" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject23"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject23"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject24" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 128 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject24"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject24"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject10" type="KinematicBody2D" parent="Walls"]
position = Vector2( 32, 128 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject10"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject10"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject11" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 64 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject11"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject11"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject2" type="KinematicBody2D" parent="Walls"]
position = Vector2( 96, 16 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject2"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject2"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject3" type="KinematicBody2D" parent="Walls"]
position = Vector2( 32, 96 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject3"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject3"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject4" type="KinematicBody2D" parent="Walls"]
position = Vector2( 64, 32 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject4"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject4"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject5" type="KinematicBody2D" parent="Walls"]
position = Vector2( 80, 0 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject5"]
position = Vector2( 16, 0 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject5"]
position = Vector2( 24, 8 )
shape = SubResource( 4 )

[node name="GenericObject6" type="KinematicBody2D" parent="Walls"]
position = Vector2( 112, 48 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject6"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject6"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject7" type="KinematicBody2D" parent="Walls"]
position = Vector2( 48, 128 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject7"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject7"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject8" type="KinematicBody2D" parent="Walls"]
position = Vector2( 144, 16 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject8"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject8"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="GenericObject0" type="KinematicBody2D" parent="Walls"]
position = Vector2( 48, 0 )

[node name="Sprite" type="Sprite" parent="Walls/GenericObject0"]
position = Vector2( 16, 0 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/GenericObject0"]
position = Vector2( 24, 8 )
shape = SubResource( 4 )

[node name="Decoration" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Decoration"]
position = Vector2( 32, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 335

[node name="Sprite2" type="Sprite" parent="Decoration"]
position = Vector2( 120, 72 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 335

[node name="Sprite3" type="Sprite" parent="Decoration"]
position = Vector2( 152, 72 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 335

[node name="Sprite4" type="Sprite" parent="Decoration"]
position = Vector2( 120, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 317

[node name="Sprite5" type="Sprite" parent="Decoration"]
position = Vector2( 136, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 317

[node name="Sprite7" type="Sprite" parent="Decoration"]
position = Vector2( 152, 8 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 317

[node name="Sprite6" type="Sprite" parent="Decoration"]
position = Vector2( 16, 120 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
flip_h = true
hframes = 20
vframes = 20
frame = 273

[node name="Blocks" type="Node" parent="."]

[node name="Bandeira = Meta" parent="Blocks" instance=ExtResource( 13 )]
position = Vector2( 187.5, 110.5 )
scale = Vector2( 0.7, 0.7 )

[node name="Haiiro = vc" parent="Blocks" instance=ExtResource( 9 )]
position = Vector2( 186, 116 )
scale = Vector2( 0.7, 0.7 )

[node name="Parede = Pare" parent="Blocks" instance=ExtResource( 10 )]
position = Vector2( 186, 116 )
scale = Vector2( 0.7, 0.7 )

[node name="Caixa = Empurre" parent="Blocks" instance=ExtResource( 7 )]
position = Vector2( 112, 88 )
scale = Vector2( 0.7, 0.7 )

[node name="Porta" parent="Blocks" instance=ExtResource( 12 )]
position = Vector2( 122, 116 )
scale = Vector2( 0.7, 0.7 )

[node name="Bot√£o = Pisar" parent="Blocks" instance=ExtResource( 11 )]
position = Vector2( 154, 116 )
scale = Vector2( 0.7, 0.7 )

[node name="IfLv9" type="Sprite" parent="Blocks"]
position = Vector2( 247, 34 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="Blocks/IfLv9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/IfLv9/StaticBody2D"]
position = Vector2( -228.572, -109.286 )
shape = SubResource( 5 )

[node name="Help" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 15 )

[node name="Help" type="Control" parent="Help"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Var" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -592, -56 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVar" type="Label" parent="Help/Help/HBoxContainer/Var"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "
Define qual √© o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Var"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 446.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Var/HBoxContainer"]
margin_right = 638.0
margin_bottom = 349.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "  - Haiiro 

  - Parede

  - Caixa

  - Porta

  - Botao

  - Bandeira"

[node name="Haiiro" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 108 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )
hframes = 17
vframes = 15
frame = 186

[node name="Bandeira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 420 )
scale = Vector2( 4, 4 )
texture = ExtResource( 17 )
hframes = 20
vframes = 10
frame = 176

[node name="Caveira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 216, 216 )
scale = Vector2( 4, 4 )
texture = ExtResource( 17 )
hframes = 20
vframes = 10
frame = 197

[node name="Box" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 204 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )
centered = false

[node name="Porta" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 20
vframes = 20
frame = 24

[node name="Porta2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 274, 292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 20
vframes = 20
frame = 20

[node name="Bot√£o" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 332 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false
hframes = 20
vframes = 21
frame = 152

[node name="Parede" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 60

[node name="Parede2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 250, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 62

[node name="Parede3" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 306, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 63

[node name="Parede4" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 362, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
hframes = 20
vframes = 20
frame = 64

[node name="Value" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVal" type="Label" parent="Help/Help/HBoxContainer/Value"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "
Define o que vai acontecer com o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Value"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 606.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Value/HBoxContainer"]
margin_right = 638.0
margin_bottom = 509.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "  - Voce: O que vai ser controlado

  - Pare: Nao pode ser atravessado

  - Empurrar: Sera movido se o jogador
 entrar em contato

  - Fechado: Nao pode ser atravessado

  - Aberto: √â possivel atravessar

  - Pisar: Ao entrar um fun√ß√£ao vai ser
  executada

  - Meta:Ao entrar em todas a fase sera
  concluida"

[connection signal="area_entered" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="Node2D" method="_on_Area2D_body_exited"]
